--- a/style.css
+++ b/style.css
@@ -35,7 +35,14 @@ header{
 }
 
 /*BARRRA MENU*/
+#banner{
+    background: url(img/banner.jpg) no-repeat;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    
 
+}
 .container__menu{
     width: 100%;
     height: 70px;
@@ -125,6 +132,14 @@ article{
 }
 
 /* Login */
+#fondo-login{
+background: url(img/fondo-login.jpg) no-repeat;
+position: absolute;
+background-size: cover;
+background-position: center center;
+height: 100%;
+width: 100%;
+}
 
 #cuerpo-login{
     margin: 0;
