--- a/style.css
+++ b/style.css
@@ -223,13 +223,13 @@ width: 100%;
 }
 
 h2{
-    color: #6f06f8;
+    color: #fc0000;
     font-size: 40px;
     text-transform: uppercase;
 }
 
 p{
-    color: #6f06f8;
+    color: #ff0101;
     font-size: 20px;
     text-transform: uppercase;
 }
