--- a/style.css
+++ b/style.css
@@ -72,14 +72,14 @@ nav > ul > li{
     position: relative;
 }
 nav > ul > li:first-child > a{
-    background-image: url(../img/Home.png);
+    background-image: url(img/Home.png);
     background-size: 24px;
     background-repeat: no-repeat;
     background-position: center center;
     padding: 20px 40px;
 }
 nav > ul > li:first-child:hover > a{
-    background-image: url(../img/Home.png);
+    background-image: url(img/Home.png);
     background-size: 24px;
     background-repeat: no-repeat;
     background-position: center center;
@@ -110,18 +110,6 @@ nav > ul > li > a:hover{
 }
 
 /*carrusel*/
-
-main{
-    padding: 40px 20px;
-    margin-top: 194px;
-}
-
-article{
-    max-width: 800px;
-    left: 58%;
-    padding: 40px;
-    position: fixed;
-}
 
 #carouselExampleCaptions{
     max-width: 800px;
@@ -224,16 +212,20 @@ width: 100%;
 }
 
 h2{
-    color: #fc0000;
-    font-size: 40px;
+    color: rgb(255, 255, 255);
+    font-size: 3rem;
     text-transform: uppercase;
+    text-shadow: 0 0 8px rgb(0, 0, 0);
 }
 
 p{
-    color: #ff0101;
-    font-size: 20px;
+    color:rgb(255, 255, 255);
+    font-size: 25px;
     text-transform: uppercase;
+    text-shadow: 0 0 8px rgb(2, 2, 2);
 }
+    
+
 
 /*Cards*/
 .container-card{
